add additional information into README
add possibility to type arguments when running RunClient